--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=register
 
 #MaySql Config
 spring.datasource.url=jdbc:mysql://localhost:3306/user_db
-spring.datasource.username=root
-spring.datasource.password=rOot41_41
+spring.datasource.username=${reg_db_username}
+spring.datasource.password=${reg_db_password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #JPA Config
