--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=register
 
-#MaySql Config
+# MySql Config
 spring.datasource.url=jdbc:mysql://localhost:3306/user_db
 spring.datasource.username=${reg_db_username}
 spring.datasource.password=${reg_db_password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#JPA Config
+# JPA Config
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.sql-show=true
 
-#Server Config
+# Server Config
 server.port=8080
